tests/neg-inline-trait/disallow-import-in-inline-trait.scala
inline trait Foo:
    import scala.collection // error